# bnb-hack

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
agent/: __init__.py  __main__.py  alerts.py  chain.py  config.py  keys.py  logger.py  loop.py  tokens.py
agent/cmc/: client.py
agent/execution/: executor.py  pancake.py
agent/market/: __init__.py  derivatives.py  dex.py  feed.py
agent/monitor/: digest.py  leaderboard.py  snapshot.py
agent/risk/: engine.py  liquidity.py  macro.py
agent/signals/: regime.py  technical.py
agent/state/: housekeep.py  reconcile.py  roundtrips.py  store.py
agent/strategies/: __init__.py  base.py  bounce.py  mean_reversion.py  momentum.py  reclaim.py  registry.py  shadow.py  trend.py
agent/twak/: client.py
agent/x402/: ledger.py  premium.py  server.py  sse_proxy.py
config/: macro_events.yaml  risk.yaml  tokens.yaml
dashboard/: app.js  index.html  style.css  tokens.json
data/: payments.jsonl
deploy/: DEPLOY.md  WINDOW.md  cloudflared-config.yml  entrypoint.sh  status.sh  trading-agent.service  twak-serve.service  x402-server.service  x402-sse-proxy.service
docs/: ARCHITECTURE.md  BENCHMARKS.md  README.md  STRATEGIES.md  STRATEGY.md  X402.md
scripts/: atr_adx_bt.py  atr_stop_bt.py  backtest.py  create_x402_wallet.py  daily_digest.py  eligible_screen.py  exit_hysteresis_bt.py  fee_sim.py  gen_token_list.py  htf_filter_bt.py  leaderboard.py  leaderboard_track.py  limit_entry_bt.py  liquidity_filter.py  market_scan.py  pancake_selftest.py  pnl_report.py  recalibrate.py  regime_gate_bt.py  register_identity.py  scenario_bt.py  shadow_race.py  shadow_report.py  squeeze_bt.py  strategy_bt.py  trade_split.py  trend_filter_bt.py  trend_vs_momentum_bt.py  vol_filter_bt.py  waiver_watchlist.py  year_forecast.py
tests/: test_atr_adx.py  test_cmc_plan.py  test_derivatives.py  test_dex.py  test_digest.py  test_housekeep.py  test_leaderboard.py  test_liquidity.py  test_macro.py  test_regime.py  test_risk_engine.py  test_shadow.py  test_sizing.py  test_strategies.py  test_technical.py  test_x402.py  test_x402_ledger.py
