[project]
name = "bnb-hack-agent"
version = "0.1.0"
description = "Autonomous self-custody trading agent on BSC: CMC signals -> deterministic strategy -> TWAK local-signing execution"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
ta = ["pandas-ta>=0.3.14b0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]
