[project]
name = "bnb-hack-agent"
version = "0.1.0"
description = "Autonomous self-custody trading agent on BSC: CMC signals -> deterministic strategy -> TWAK local-signing execution"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "pycryptodome>=3.20",  # keccak256 for deterministic CREATE2 pool derivation
]

[project.optional-dependencies]
ta = ["pandas-ta>=0.3.14b0"]
dev = ["pytest>=8.0"]
identity = ["bnbagent>=0.3", "eth-account>=0.13"]  # one-shot ERC-8004 registration

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]
